@@ -68,7 +68,11 @@ if (defined $Codestriker::tmpdir && $Codestriker::tmpdir ne '') {
 # tainted mode under Win32.
 my $osname = $Config{'osname'};
 my $windows = (defined $osname && $osname eq "MSWin32") ? 1 : 0;
-$ENV{'PATH'} = '/bin:/usr/bin' if ($windows == 0);
+if ($windows == 0) {
+    $ENV{'PATH'} = '/bin:/usr/bin';
+} else {
+    $ENV{'PATH'} = '';
+}
 
 # Prototypes of subroutines used in this module.
 sub main();
